[iOS] Fixing rounded image in TableViewAccountCell

The corner radius of |_imageView| should always be set to
kHorizontalImageFixedSize / 2.0f.

Also moving all the subviews attributes to -[TableViewAccountItem
addSubviews].

Bug: 922501
Change-Id: Ib3fb2ca61038db12deab2edca1f48d049017b9db
Reviewed-on: https://chromium-review.googlesource.com/c/1412356
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623258}